close #1 : initial requirement

--- a/app/i18n/zh_CN.json
+++ b/app/i18n/zh_CN.json
@@ -22,7 +22,7 @@
       "mbm": {
         "MBM": "厂商品牌",
         "MANUFACTURER": "制造商",
-        "BRAND": "车辆品牌"
+        "BRAND": "品牌管理"
       },
       "DEVICE": "出厂设备",
       "statistic": {
